# d3cs-prototype

./: .gitignore  Cargo.toml  README.md
config/: attributes.json  blpbiba.toml
diagrams/: decryption.md  delegation.md  encryption.md  keygen.md  revocation.md  setup.md  sync_arl.md  sync_auth.md
gui/: index.html  main.js
network/: frames.rs  main.rs  netmanager.rs
network/dodwan/: README.md
specs/: LATER.md  SLIDES_LAYOUT.md  SPEC_LOCAL.md  SPEC_NETWORK.md
src/: api.rs  main.rs
src/authority/: mod.rs
src/crypto/: abs.rs  cpabe.rs  mod.rs
tm/: arl.json
tm/groups/Net1/ct/: 1.ct  2.ct  3.ct  4.ct  5.ct  6.ct
tm/groups/Net1/ct_intermediate/: 2.cti  3.cti  4.cti  5.cti  6.cti
tm/groups/Net1/s/: 1.sign  2.sign  3.sign  4.sign  5.sign  6.sign
users/admin/: 1.txt  2.txt  token.json
users/u1/: token.json
