[package]
name = "d3cs-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
dotenvy = "0.15"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tiny_http = "0.12"
toml = "0.8"

ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
